@@ -59,6 +59,7 @@
 * Shift4 V2: Add unstore function [javierpedrozaing] #4953
 * CommerceHub: Add 3DS global support [sinourain] #4957
 * SumUp Gateway: Fix refund method [sinourain] #4924
+* Braintree: Add v2 stored credential option [aenand] #4937
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
